# swiglibmempy

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Libmem/: CMakeLists.txt
Libmem/include/libmem/: libmem.h  readme.txt
Libmem/python/: CMakeLists.txt  libmem.i
Libmem/src/: libmem.cpp
cmake/: CMakeLists.txt.libmem  CMakeLists.txt.swig  cpp.cmake  libmem.cmake  python.cmake  swig.cmake  swiglibmemConfig.cmake.in
lib/: readme.txt
python/: setup.py.in
